--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 
 <!-- example style -->
 <style type="text/vendor">
-#fade {
+#button {
   -vendor-transition: opacity 1s linear;
 }
 .block{
@@ -26,7 +26,7 @@ body {
   text-align: center;
   margin: 0;
 }
-#page {
+section {
   font-family: arial;
   text-align: center;
   width: 200px;
@@ -43,11 +43,11 @@ h3 {
   padding: 20px;
 }
 
-#fade{
+#button{
   background-color: red;
   opacity: 1;
 }
-#fade:hover{
+#button:hover{
   opacity: 0;
 }
 #bouncer { 
@@ -63,16 +63,17 @@ h3 {
     
 <h3>Vendor JS Demo</h3>
 
-<div id="page">
+<section>
 
-  <div id="fade" class="block">
+  <span id="button" class="block">
     Please hover me!
-  </div>
+  </span>
 
-  <div id="bouncer" class="block">
+  <span id="bouncer" class="block">
     Bouncing Box
-  </div>
-</div>
+  </span>
+
+</section>
 
 <script src="vendor.js"></script>
 
