--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-<title>Vendor JS Demo</title>
+<title>Vendor Prefix - CSS3 Demo</title>
 
 <!-- example link -->
 <link href="css3.css" rel="stylesheet" type="text/vendor" />
@@ -51,9 +51,11 @@ h3 {
   opacity: 0;
 }
 #bouncer { 
+  background-color: darkgreen;
   color: #DDD;
   position: absolute; 
   left: 0;
+  bottom: 0;
   width: 200px; 
 }
 </style>
@@ -61,7 +63,8 @@ h3 {
 
 <body>
     
-<h3>Vendor JS Demo</h3>
+	<h3>Vendor Prefix - CSS3 Demo</h3>
+	<p>Write one prefix - and support all current devices.</p>
 
 <section>
 
@@ -75,7 +78,7 @@ h3 {
 
 </section>
 
-<script src="vendor.js"></script>
+<script src="vendor.min.js"></script>
 
 </body>
 </html>
